--- a/exercicios-jfx/src/basico/Contador.css
+++ b/exercicios-jfx/src/basico/Contador.css
@@ -3,7 +3,7 @@
 	-fx-font-family: "Oswald";
 }
 
-.titulo{
+.titulo {
 	-fx-text-fill: #48b2ee;
 	-fx-font-size: 36px;
 }
@@ -11,4 +11,21 @@
 .numero {
 	-fx-text-fill: #eee;
 	-fx-font-size: 28px;
+}
+
+.botao {
+	-fx-background-color: #fff;
+	-fx-text-fill: #48b2ee;
+	-fx-font-size: 28px;
+	-fx-min-width: 60px;
+	-fx-min-height: 60px;
+	-fx-background-radius: 100%;
+}
+
+.verde{
+	-fx-text-fill: #4bdb82;
+}
+
+.vermelho{
+	-fx-text-fill: #ee4139;
 }
