--- a/exercicios-jfx/bin/fxml/Login.fxml
+++ b/exercicios-jfx/bin/fxml/Login.fxml
@@ -3,17 +3,17 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.*?>
 
-<GridPane xmlns:fx="http://javafx.com/fxml/1">
+<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxml.LoginController">
 	
 	<Label text="Seja bem vindo" GridPane.columnIndex="0" GridPane.rowIndex="0"></Label>
 	
 	<Label text="E-mail: " GridPane.columnIndex="0" GridPane.rowIndex="1"></Label>
-	<TextField GridPane.columnIndex="1" GridPane.rowIndex="1"></TextField>
+	<TextField GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="emailField"></TextField>
 	
 	<Label text="Senha: " GridPane.columnIndex="0" GridPane.rowIndex="2"></Label>
-	<PasswordField GridPane.columnIndex="1" GridPane.rowIndex="2"></PasswordField>
+	<PasswordField GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="senhaField"></PasswordField>
 	
-	<Button text="Entrar" GridPane.columnIndex="0" GridPane.rowIndex="3"></Button>
+	<Button text="Entrar" GridPane.columnIndex="0" GridPane.rowIndex="3" onAction="#entrar"></Button>
 	
 </GridPane>
 
