--- a/exercicios-jfx/bin/fxml/Login.fxml
+++ b/exercicios-jfx/bin/fxml/Login.fxml
@@ -2,18 +2,38 @@
 
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.geometry.Insets?>
 
-<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxml.LoginController" styleClass="login">
+<GridPane xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="fxml.LoginController" styleClass="login" hgap="15"
+	vgap="15">
+
+	<padding>
+		<Insets left="40" right="40" top="40" />
+	</padding>
 	
-	<Label text="Seja bem vindo" GridPane.columnIndex="0" GridPane.rowIndex="0" styleClass="login-titulo"></Label>
-	
-	<Label text="E-mail: " GridPane.columnIndex="0" GridPane.rowIndex="1" styleClass="login-form-label"></Label>
-	<TextField GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="emailField"></TextField>
-	
-	<Label text="Senha: " GridPane.columnIndex="0" GridPane.rowIndex="2" styleClass="login-form-label"></Label>
-	<PasswordField GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="senhaField"></PasswordField>
-	
-	<Button text="Entrar" GridPane.columnIndex="0" GridPane.rowIndex="3" onAction="#entrar" styleClass="login-form-botao"></Button>
-	
+	<columnConstraints>
+		<ColumnConstraints minWidth="60" prefWidth="60"/>
+		<ColumnConstraints minWidth="200" maxWidth="Infinity" hgrow="ALWAYS"/>
+	</columnConstraints>
+
+	<Label text="Seja bem vindo" GridPane.columnIndex="0"
+		GridPane.rowIndex="0" GridPane.columnSpan="2"
+		GridPane.halignment="CENTER" styleClass="login-titulo"></Label>
+
+	<Label text="E-mail:" GridPane.columnIndex="0"
+		GridPane.rowIndex="1" styleClass="login-form-label"></Label>
+	<TextField GridPane.columnIndex="1" GridPane.rowIndex="1"
+		fx:id="emailField"></TextField>
+
+	<Label text="Senha:" GridPane.columnIndex="0"
+		GridPane.rowIndex="2" styleClass="login-form-label"></Label>
+	<PasswordField GridPane.columnIndex="1"
+		GridPane.rowIndex="2" fx:id="senhaField"></PasswordField>
+
+	<Button text="Entrar" GridPane.columnIndex="0"
+		GridPane.rowIndex="3" onAction="#entrar" styleClass="login-form-botao"
+		GridPane.columnSpan="2" GridPane.halignment="CENTER"></Button>
+
 </GridPane>
 
