FXML: adicionando margens

--- a/exercicios-jfx/bin/fxml/Login.fxml
+++ b/exercicios-jfx/bin/fxml/Login.fxml
@@ -11,15 +11,21 @@
 	<padding>
 		<Insets left="40" right="40" top="40" />
 	</padding>
-	
+
 	<columnConstraints>
-		<ColumnConstraints minWidth="60" prefWidth="60"/>
-		<ColumnConstraints minWidth="200" maxWidth="Infinity" hgrow="ALWAYS"/>
+		<ColumnConstraints minWidth="60" prefWidth="60" />
+		<ColumnConstraints minWidth="200"
+			maxWidth="Infinity" hgrow="ALWAYS" />
 	</columnConstraints>
 
 	<Label text="Seja bem vindo" GridPane.columnIndex="0"
 		GridPane.rowIndex="0" GridPane.columnSpan="2"
-		GridPane.halignment="CENTER" styleClass="login-titulo"></Label>
+		GridPane.halignment="CENTER" styleClass="login-titulo">
+
+		<GridPane.margin>
+			<Insets top="20" bottom="20" />
+		</GridPane.margin>
+	</Label>
 
 	<Label text="E-mail:" GridPane.columnIndex="0"
 		GridPane.rowIndex="1" styleClass="login-form-label"></Label>
@@ -33,7 +39,12 @@
 
 	<Button text="Entrar" GridPane.columnIndex="0"
 		GridPane.rowIndex="3" onAction="#entrar" styleClass="login-form-botao"
-		GridPane.columnSpan="2" GridPane.halignment="CENTER"></Button>
+		GridPane.columnSpan="2" GridPane.halignment="CENTER">
+
+		<GridPane.margin>
+			<Insets top="20" bottom="20" />
+		</GridPane.margin>
+	</Button>
 
 </GridPane>
 
